app/assets/stylesheets/components/_exchange.scss
/* ... */
.markets {
	background-color: black;

	.bottom-header {
		margin-bottom: 10px;

		.mymarkets-header {
			border-bottom: 1px solid;
			border-bottom-color: #ffc000;
			color: #ffc000;
			text-align: center;

			&.inactive {
				border-bottom-color: transparent;
				color: white;
			}
		}
	}

	.mymarkets-tabs {
		width: 100%;
		list-style: none;
		margin: 10px auto;

		> li {
			font-size: 15px;
			display: inline-block;
			margin: 0 5px;
			cursor: pointer;

			&:hover {
				color: #ffc000;
			}

			&.active {
				color: #ffc000;
			}
		}
	}

	.mymarkets-base-select {
		margin: 0;
		padding: 0;
		height: inherit;
		font-size: inherit;
	}

	.mymarkets-list {
		padding: 0;
		font-size: 0.75rem;

		.table {
			border: 1px solid #15171b;
		}

		.table > thead tr th {
			font-size: 0.75rem;
			height: 50px;
			background-color: #15171b;
		}

		.table > tbody tr td {
			padding-top: 10px;
			padding-bottom: 10px;
			padding-left: 10px;
			border-bottom: 1px solid #15171b;
		}
	}
}

// Order Book Panel
.order-book-panel {
	.header {
		background: #1c1f27;
		font-size: 16px;
		height: 46px;
		width: 100%;
		color: white;

		div {
			display: inline-block;

			&.title {
				margin-left: 10px;
				margin-top: 15px;
			}

			&.tap {
				float: right;
				padding: 15px 20px;

				&.active {
					background-color: black;
					border-top: 2px solid #ffc000;
					color: #ffc000;
				}

				&:hover {
					cursor: pointer;
				}
			}
		}
	}
}

// Buy_Sell wallet icon section css
.amount_footer {
	display: flex;
	background: #21252f;
	border-radius: 4px;
	margin: -15px 0 0 0;
	display: flex;
	justify-content: space-between;
	padding: 5px 15px;
	border-top: 1px solid rgba(86, 97, 118, 0.3);
	border-top-left-radius: 0;
	border-top-right-radius: 0;
	margin-top: -10px;

	.left_footer_sec {
		display: flex;
		align-items: center;

		span {
			font-size: 12px;
			text-align: right;
			text-transform: uppercase;
			color: rgba(255, 255, 255, 0.5);
			border-right: 1px solid rgba(86, 97, 118, 0.3);
			padding-right: 10px;
			// width: 50%;
		}
	}

	.right_footer_sec span {
		font-size: 14px;
		text-align: right;
		text-transform: uppercase;
		color: rgba(255, 255, 255, 0.5);
		display: inline-block;
		margin: 0 0 0 8px;
	}

	.wallet_img {
		max-width: 15px;
		margin-right: 6px;
	}
	.per_item {
		cursor: pointer;
	}
	.active_item {
		color: #fff !important;
	}
}

@media screen and (max-width: 1440px) {
	.order-book-panel {
		.header .tap {
			padding: 15px 8px !important;
		}
	}
}

.buy-sell-container {
	.ant-row {
		padding: 5px;

		.ant-input-group-addon {
			padding: 0;
		}
	}
}

